--- a/packages/ui-webc/src/components/button/button.css
+++ b/packages/ui-webc/src/components/button/button.css
@@ -1,10 +1,7 @@
-:host {
+.button {
+  flex: 1;
   display: inline-flex;
   height: var(--spacing-10);
-}
-
-.button {
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: var(--spacing-3);
