--- a/packages/ui-webc/src/components/card/card.css
+++ b/packages/ui-webc/src/components/card/card.css
@@ -1,4 +1,8 @@
 :host {
+  display: contents;
+}
+
+.card {
   display: block;
   border-radius: var(--spacing-2);
   border: 1px solid var(--color-gray-100);
