--- a/packages/ui-webc/src/components/list-view-subheader/list-view-subheader.css
+++ b/packages/ui-webc/src/components/list-view-subheader/list-view-subheader.css
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: var(--spacing-2) var(--spacing-4) var(--spacing-1) !important;
+  padding: 0 var(--spacing-4) !important;
+  height: var(--spacing-12);
   border: none !important;
   background-color: transparent;
 }
@@ -13,6 +14,6 @@
   margin: 0;
   padding: 0;
   font: var(--type-body-sm);
-  color: var(--color-text-base);
+  color: var(--color-gray-800);
   font-weight: 500;
 }
