--- a/packages/ui-webc/src/components/button/button.css
+++ b/packages/ui-webc/src/components/button/button.css
@@ -1,21 +1,31 @@
 scout-button {
   display: inline-block;
   height: var(--spacing-10);
+  font: var(--type-body-base);
+
+  &[data-size="large"] {
+    height: var(--spacing-12);
+    font: var(--type-body-lg);
+  }
 
   .button {
     flex: 1;
     display: inline-flex;
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
     gap: var(--spacing-3);
     padding: 0 var(--spacing-4);
-    font: var(--type-body-base);
     border-radius: var(--spacing-2);
     border: 1px solid transparent;
     cursor: pointer;
     text-decoration: none;
     box-sizing: border-box;
+  }
+
+  &[data-size="large"] .button {
+    padding: 0 var(--spacing-5);
   }
 
   .icon {
@@ -29,17 +39,17 @@ scout-button {
     height: 100%;
   }
 
-  &.icon-only .button {
+  &[data-icon-only] .button {
     aspect-ratio: 1 / 1;
     justify-content: center;
     padding: 0;
   }
 
-  &.icon-only .icon {
+  &[data-icon-only] .icon {
     margin: 0;
   }
 
-  &.icon-only .content {
+  &[data-icon-only] .content {
     /* Visually hidden: https://www.a11yproject.com/posts/how-to-hide-content/ */
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
