--- a/plop-templates/component/ui-webc/component.tsx.hbs
+++ b/plop-templates/component/ui-webc/component.tsx.hbs
@@ -1,4 +1,4 @@
-import { Component, h } from "@stencil/core";
+import { Component, type ComponentInterface, h } from "@stencil/core";
 
 @Component({
   tag: "scout-{{name}}",
@@ -7,7 +7,7 @@ import { Component, h } from "@stencil/core";
     delegatesFocus: true,
   },
 })
-export class Scout{{pascalCase name}} {
+export class Scout{{pascalCase name}} implements ComponentInterface {
   render() {
     return (
       <slot />
